--- a/css/admin.css
+++ b/css/admin.css
@@ -1,19 +1,23 @@
 /* Admin CSS */
 
 #footer-upgrade {
-display: none;
+	display: none;
+}
+
+.edit-post-meta-boxes-area .postbox {
+	margin: 15px auto;
 }
 
 .cf-container .cf-field.admin-col-4 {
-flex: 1 1 33.333333%;
+	flex: 1 1 33.333333%;
 }
 
 .cf-container .cf-field.admin-col-6 {
-flex: 1 1 50%;
+	flex: 1 1 50%;
 }
 
 .cf-container .cf-field.admin-col-8 {
-flex: 1 1 66.666667%;
+	flex: 1 1 66.666667%;
 }
 
 th#availability,
@@ -22,7 +26,9 @@ th#property_type,
 th#agent,
 th#date,
 th#permalink-manager-col {
-width: 10%;
+	width: 10%;
 }
 
-th#price { width: 9%; }
+th#price {
+	width: 9%;
+}
